--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,2 @@
-*.SQL linguist-detectable=true  
-*.java linguist-detectable=false  
-*.js linguist-detectable=false  
-*.html linguist-detectable=false  
-*.xml linguist-detectable=false 
+*.sql linguist-language=sql
+*.my linguist-language=sql
